kustomize/apps/store-simulator/base/deploymentconfig.yaml
apiVersion: apps.openshift.io/v1
kind: DeploymentConfig
metadata:
  annotations:
    app.openshift.io/vcs-url: https://github.com/ibm-cloud-architecture/refarch-eda-store-simulator.git
  labels:
    app.kubernetes.io/name: store-simulator
    app.openshift.io/runtime: quarkus
  name: store-simulator
spec:
  replicas: 1
  selector:
    app.kubernetes.io/name: store-simulator
  template:
    metadata:
      annotations:
        app.openshift.io/vcs-url: https://github.com/ibm-cloud-architecture/refarch-eda-store-simulator.git
      labels:
        app.kubernetes.io/name: store-simulator
        app.openshift.io/runtime: quarkus
    spec:
      containers:
      - args:
        - -Dquarkus.http.host=0.0.0.0
        - -Djava.util.logging.manager=org.jboss.logmanager.LogManager
        - -jar
        - /deployments/quarkus-run.jar
        command:
        - java
        image: quay.io/ibmcase/eda-store-simulator
        imagePullPolicy: IfNotPresent
        livenessProbe:
          failureThreshold: 3
          httpGet:
            path: /q/health/live
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 0
          periodSeconds: 30
          successThreshold: 1
          timeoutSeconds: 10
        name: store-simulator
        ports:
        - containerPort: 8080
          name: http
          protocol: TCP
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /q/health/ready
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 0
          periodSeconds: 30
          successThreshold: 1
          timeoutSeconds: 10
        volumeMounts:
        - mountPath: /deployments/certs/server
          name: kafka-cert
          readOnly: false
          subPath: ""
        - mountPath: /deployments/certs/user
          name: user-cert
          readOnly: false
          subPath: ""
      serviceAccount: store-simulator
      volumes:
      - name: kafka-cert
        secret:
          defaultMode: 384
          optional: false
          secretName: lab-kafka-cluster-ca-cert
      - name: user-cert
        secret:
          defaultMode: 384
          optional: false
          secretName: tls-user
