kustomize/apps/store-simulator/base/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    app.openshift.io/vcs-url: https://github.com/ibm-cloud-architecture/refarch-eda-store-simulator.git
  labels:
    app.kubernetes.io/name: store-simulator
    app.openshift.io/runtime: quarkus
  name: store-simulator
spec:
  host: ""
  path: /
  port:
    targetPort: 8080
  to:
    kind: Service
    name: store-simulator
